--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,15 +11,16 @@
 <%=link_to "destroy",book_path(book.id), method: :delete, "data-confirm" => "are you sure？" %>
 <%end%>
 
+
 <% if @book.errors.any?%>
- <%= @book.errors.count %>errors prohibited this book from being saved:
+ <%= @book.errors.count %>error prohibited this book from being saved:
  <ul>
+
    <% @book.errors.full_messages.each do |message| %>
    <li><%=message%></li>
  </ul>
+ <%end%>
 <%end%>
-
-
 
 
 <h2>New book</h2>
