--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -14,10 +14,7 @@
 <%=link_to "back",books_path %>
 
 <% if @book.errors.any?%>
- <%= @book.errors.count %>The page you were looking for doesn't exist.
-You may have mistyped the address or the page may have moved.
-
-If you are the application owner check the logs for more information.
+ <%= @book.errors.count %>error prohibited this book from being saved:
  <ul>
 
    <% @book.errors.full_messages.each do |message| %>
@@ -25,4 +22,3 @@ If you are the application owner check the logs for more information.
  </ul>
  <%end%>
 <%end%>
-
