--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,10 @@
-<h1>Bookers</h1>
-<th>title</th>
-<th>body</th>
 
+ 
+  <h1>Books</h1>
+ 
+   <p>title</p>
+   <p>body</p>
+   
 <% @books.each do |book| %>
 <td><%=book.title%></td>
 
@@ -21,7 +24,7 @@
  </ul>
  <%end%>
 <%end%>
-
+ 
 
 <h2>New book</h2>
 <%=form_with model:@book do |f| %>
