--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,30 +1,38 @@
 
- 
+
   <h1>Books</h1>
- 
-   <p>title</p>
-   <p>body</p>
-   
+<table>
+<thead>
+ <tr>
+   <th>title</th>
+   <th>body</th>
+   <th colspan="3"></th>
+  </tr>
+</thead>
+
+<tbody>
 <% @books.each do |book| %>
+<tr>
 <td><%=book.title%></td>
 
 <td><%=book.body%></td>
-<%=link_to "Show",book_path(book.id) %>
-<%=link_to "edit",edit_book_path(book.id) %>
-<%=link_to "destroy",book_path(book.id), method: :delete, "data-confirm" => "are you sure？" %>
+<td><%=link_to "show",book_path(book.id) %></td>
+<td><%=link_to "edit",edit_book_path(book.id) %></td>
+<td><%=link_to "Destroy",book_path(book.id), method: :delete, "data-confirm" => "are you sure？" %></td>
 <%end%>
-
+</tr>
+</tbody>
+</table>
 
 <% if @book.errors.any?%>
  <%= @book.errors.count %>error prohibited this book from being saved:
  <ul>
-
    <% @book.errors.full_messages.each do |message| %>
    <li><%=message%></li>
  </ul>
  <%end%>
 <%end%>
- 
+
 
 <h2>New book</h2>
 <%=form_with model:@book do |f| %>
